--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,10 +11,12 @@
 {% if page.cta != false %}
 <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
     <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
-        <p>Sprawdź najbliższe Patoszkolenie👇</p>
+        <p>Ostatnie Patoszkolenie w tym roku👇</p>
         <p>
-            💣💣💣 <a href="https://app.easycart.pl/checkout/patoarchitekci/modelowanie-danych"
-                style="color: #fff; text-decoration: underline;">[15.10.2024] Modelowanie Danych</a> 💣💣💣
+            <a href="https://app.easycart.pl/checkout/patoarchitekci/observabiity"
+                style="color: #fff; text-decoration: underline;">[18.11.2024] Observability</a></br>
+            <a href="https://app.easycart.pl/checkout/patoarchitekci/architektura-101"
+                style="color: #fff; text-decoration: underline;">[03.12.2024] Architektura 101</a>
         </p>
     </div>
     {% else %}
