Update podcast post title format to include episode number

--- a/scripts/podcast_post.md.j2
+++ b/scripts/podcast_post.md.j2
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '{{ episode.title | escape }}'
+title: '#{{ episode.episode_number }} {{ episode.title | escape }}'
 date: {{ episode.date }} 08:00:00 +0200
 description: {# TODO: Add description field to Airtable or generate dynamically? #}
 
