Update newsletter title and description; add local environment support and testing script

--- a/scripts/newsletter_post.md.j2
+++ b/scripts/newsletter_post.md.j2
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Pato Short Mail #{{ newsletter.Id }}"
+title: "Pato Summer Short Mail #{{ newsletter.Id }} 🌞🏖️"
 date: {{ newsletter.Date }} 08:00:00 +0200
 newsletter_id: {{ newsletter.Id }}
 {% if recommended_episode %}
