--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,3 +1,6 @@
+<!-- ===== Swiper for testimonials ===== -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
 <script src="{{ .Site.BaseURL }}js/common.js"></script>
 {{ if .IsHome }}
 <script src="{{ .Site.BaseURL }}js/main.js"></script>
@@ -6,7 +9,11 @@
 <script src="{{ .Site.BaseURL }}js/contact.js"></script>
 {{ end }}
 {{ if eq .Type "training" }}
+  {{ if eq .Layout "list" }}
+<script src="{{ .Site.BaseURL }}js/all-trainings.js"></script>
+  {{ else }}
 <script src="{{ .Site.BaseURL }}js/training.js"></script>
+  {{ end }}
 {{ end }}
 {{ if eq .Type "episodes" }}
 <script src="{{ .Site.BaseURL }}js/podcast.js"></script>
