--- a/layouts/partials/header-dark.html
+++ b/layouts/partials/header-dark.html
@@ -43,7 +43,7 @@
             <li>
               <a target="_blank"
                 class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black lg:text-white uppercase py-1.5 px-2.5 hover:bg-dark-black hover:text-white lg:hover:bg-white hover:bg-dark-black hover:text-white lg:hover:text-dark-black rounded-full transition-all duration-300 ease-linear"
-                href="http://bettersoftwaredesign.pl/wspolpraca/bezplatne-konsultacje/">Bezpłatna Konsultacja</a>
+                href="{{ .Site.Params.consultation.url }}">{{ .Site.Params.consultation.title }}</a>
             </li>
             <li>
               <a class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black lg:text-white uppercase py-1.5 px-2.5 hover:bg-dark-black hover:text-white lg:hover:bg-white hover:bg-dark-black hover:text-white lg:hover:text-dark-black rounded-full transition-all duration-300 ease-linear"
