Adjust header levels for consistency in newsletter formatting

--- a/scripts/newsletter_post.md.j2
+++ b/scripts/newsletter_post.md.j2
@@ -12,7 +12,7 @@ recommended_episode: {{ recommended_episode.episode_number }}
 
 {% for person in link_order %}
 {% if links[person] %}
-## {{ 'Łukasz' if person == 'lukasz' else 'Szymon' }}: [{{ links[person].name }}]({{ links[person].url }})
+### {{ 'Łukasz' if person == 'lukasz' else 'Szymon' }}: [{{ links[person].name }}]({{ links[person].url }})
 
 {% if links[person].image_path %}
 <br>
@@ -26,7 +26,7 @@ recommended_episode: {{ recommended_episode.episode_number }}
 {% endfor %}
 
 {% if recommended_episode %}
-## 📻 Polecany odcinek: #{{ recommended_episode.episode_number }} {{ recommended_episode.title }}
+### 📻 Polecany odcinek: #{{ recommended_episode.episode_number }} {{ recommended_episode.title }}
 
 {{ newsletter.Recommended_Episode_Description | default('', true) }}
 
@@ -48,9 +48,9 @@ recommended_episode: {{ recommended_episode.episode_number }}
 
 {% endif %}
 
-### 🤝 Dołącz do Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
+#### 🤝 Dołącz do Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
-### 🏢 Patron newslettera
+#### 🏢 Patron newslettera
 Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
 
 PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
